Changed from using new Boolean() to Boolean.valueOf()